Fix invisible subject in compact card layout
The subject was missing/invisible likely due to max-height. This CL
changes removes the hight and uses the line-clamp method to limit the
subject to a single line. This actually does show ellipsis too.

--- a/assets/stylesheets/dashboard.issues.css
+++ b/assets/stylesheets/dashboard.issues.css
@@ -213,9 +213,12 @@
 	font-size: .95em;
 }
 .rdb-compact-subject {
-	max-height: 1.3em;
-	text-overflow: ellipsis;
 	overflow: hidden;
+	text-overflow: ellipsis;
+
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 .rdb-compact-property {
 	color: #999;
